// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`it overrides expected resources 1`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "createTest",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "MutationcreateTestinit0FunctionMutationcreateTestinit0FunctionAppSyncFunction82753130",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "MutationcreateTestpreAuth0FunctionMutationcreateTestpreAuth0FunctionAppSyncFunctionC0EB74A1",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "MutationCreateTestDataResolverFnMutationCreateTestDataResolverFnAppSyncFunction005BA3A1",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Mutation"))
$util.qr($ctx.stash.put("fieldName", "createTest"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "TestTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 25))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 2`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "getTest",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "QuerygetTestpreAuth0FunctionQuerygetTestpreAuth0FunctionAppSyncFunction7DE868FF",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QueryGetTestDataResolverFnQueryGetTestDataResolverFnAppSyncFunctionCB6458E5",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Query"))
$util.qr($ctx.stash.put("fieldName", "getTest"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "TestTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 25))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 3`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "listTests",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "QuerylistTestspreAuth0FunctionQuerylistTestspreAuth0FunctionAppSyncFunction3CA4A90C",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QueryListTestsDataResolverFnQueryListTestsDataResolverFnAppSyncFunction177A117F",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Query"))
$util.qr($ctx.stash.put("fieldName", "listTests"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "TestTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 25))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 4`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "deleteTest",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "MutationdeleteTestpreAuth0FunctionMutationdeleteTestpreAuth0FunctionAppSyncFunctionC68C5724",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "MutationDeleteTestDataResolverFnMutationDeleteTestDataResolverFnAppSyncFunction9230CF9A",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Mutation"))
$util.qr($ctx.stash.put("fieldName", "deleteTest"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "TestTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 25))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 5`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "updateTest",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "MutationupdateTestinit0FunctionMutationupdateTestinit0FunctionAppSyncFunctionC2375285",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "MutationcreateTestpreAuth0FunctionMutationcreateTestpreAuth0FunctionAppSyncFunctionC0EB74A1",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "MutationUpdateTestDataResolverFnMutationUpdateTestDataResolverFnAppSyncFunction161162F8",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Mutation"))
$util.qr($ctx.stash.put("fieldName", "updateTest"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "TestTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 25))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 6`] = `
{
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "syncTests",
    "Kind": "PIPELINE",
    "PipelineConfig": {
      "Functions": [
        {
          "Fn::GetAtt": [
            "QuerysyncTestspreAuth0FunctionQuerysyncTestspreAuth0FunctionAppSyncFunction6F326BAB",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        {
          "Fn::GetAtt": [
            "QuerySyncTestsDataResolverFnQuerySyncTestsDataResolverFnAppSyncFunction95B4DA0E",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": {
      "Fn::Join": [
        "",
        [
          "$util.qr($ctx.stash.put("typeName", "Query"))
$util.qr($ctx.stash.put("fieldName", "syncTests"))
$util.qr($ctx.stash.put("conditions", []))
$util.qr($ctx.stash.put("metadata", {}))
$util.qr($ctx.stash.metadata.put("dataSourceType", "AMAZON_DYNAMODB"))
$util.qr($ctx.stash.metadata.put("apiId", "",
          {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          ""))
$util.qr($ctx.stash.put("connectionAttributes", {}))
$util.qr($ctx.stash.put("tableName", "",
          {
            "Ref": "TestTable",
          },
          ""))
$util.qr($ctx.stash.put("deltaSyncTableTtl", 25))
$util.qr($ctx.stash.put("adminRoles", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 7`] = `
{
  "DependsOn": [
    "TestIAMRoleB964910C",
  ],
  "Properties": {
    "ApiId": {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "DynamoDBConfig": {
      "AwsRegion": {
        "Ref": "AWS::Region",
      },
      "DeltaSyncConfig": {
        "BaseTableTTL": "20",
        "DeltaSyncTableName": "TestTable",
        "DeltaSyncTableTTL": "25",
      },
      "TableName": {
        "Ref": "TestTable",
      },
      "Versioned": true,
    },
    "Name": "TestTable",
    "ServiceRoleArn": {
      "Fn::GetAtt": [
        "TestIAMRoleB964910C",
        "Arn",
      ],
    },
    "Type": "AMAZON_DYNAMODB",
  },
  "Type": "AWS::AppSync::DataSource",
}
`;
